--- a/app/src/main/res/layout/product_element.xml
+++ b/app/src/main/res/layout/product_element.xml
@@ -7,10 +7,11 @@
 
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="480dp"
+            android:layout_width="0dp"
             android:layout_height="503dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0">
         <Button
                 android:text="Delete"
                 android:layout_width="match_parent"
@@ -27,8 +28,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/edit_btn" android:background="#E96496"/>
         <TextView
-                android:text="TextView"
+                android:text="NameTextView"
+                android:layout_width="match_parent"
+                android:layout_height="50dp" android:id="@+id/name_tb"
+                android:textSize="24sp"/>
+
+        <TextView
+                android:text="NoteTextView"
                 android:layout_width="385dp"
-                android:layout_height="157dp" android:id="@+id/desc_tb"/>
+                android:layout_height="101dp" android:id="@+id/note_tb" android:textColor="#000000"
+                android:textSize="20sp"/>
+        <TextView
+                android:text="PriceTextView"
+                android:layout_width="match_parent"
+                android:layout_height="42dp" android:id="@+id/price_tb"
+                android:textSize="20sp"/>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
