--- a/app/src/main/res/layout/product_element.xml
+++ b/app/src/main/res/layout/product_element.xml
@@ -7,23 +7,17 @@
 
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_height="503dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="412dp"
+            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintVertical_bias="0.0" android:id="@+id/linearLayout">
         <Button
                 android:text="Delete"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/delete_btn" android:background="#E96496"
                 android:textColor="@color/white"
                 android:onClick="deleteProduct"/>
-        <ImageView
-                android:layout_width="128dp"
-                android:layout_height="128dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imgv"
-                android:layout_marginTop="49dp" android:layout_marginEnd="178dp"
-                android:layout_marginStart="178dp"
-                android:layout_marginBottom="35dp"/>
         <Button
                 android:text="Edit"
                 android:layout_width="match_parent"
@@ -36,14 +30,15 @@
 
         <TextView
                 android:text="NoteTextView"
-                android:layout_width="385dp"
+                android:layout_width="match_parent"
                 android:layout_height="101dp" android:id="@+id/note_tb" android:textColor="#000000"
                 android:textSize="20sp"/>
         <TextView
                 android:text="PriceTextView"
                 android:layout_width="match_parent"
-                android:layout_height="42dp" android:id="@+id/price_tb"
+                android:layout_height="50dp" android:id="@+id/price_tb"
                 android:textSize="20sp"/>
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
