--- a/app/src/main/res/layout/add_product_form.xml
+++ b/app/src/main/res/layout/add_product_form.xml
@@ -9,7 +9,8 @@
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/add_product_form_ll"
+    >
         <TextView
                 android:text="Agregar Producto"
                 android:layout_width="match_parent"
